--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -47,6 +47,17 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/W1:
+    name: W1
+    description: Really solid info
+    author: sydney.davis@yahoo.com
+    mode: batch
+    language: scala
+    createdAt: '2022-04-18 04:00:29'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
   workflows/Mary_Rath_MD:
     name: Mary_Rath_MD
     description: ''
@@ -81,7 +92,15 @@ pipelines:
       outputs: []
     dependencies: {}
 datasets: {}
-jobs: {}
+jobs:
+  jobs/Theodore_SmithamAyma_MoronJohn_Huel:
+    name: Theodore_SmithamAyma_MoronJohn_Huel
+    description: Really solid info
+    scheduler:
+      Nil: {}
+    schedulerJobUID: null
+    createdAt: '2022-04-18 04:00:30'
+    author: sydney.davis@yahoo.com
 libraries: []
 dependencies: '[]'
 template: '[]'
